--- a/Notebooks/OpenCV.ipynb
+++ b/Notebooks/OpenCV.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bda14fb0",
+   "metadata": {},
+   "source": [
+    "**opencv-python**: Noraml verion with GUI <br>\n",
+    "**opencv-python-headless**: no GUI, for backend <br>\n",
+    "**opencv-contrib-python**: Extra modules and features <br>\n",
+    "**opencv-contrib-python**: No GUI, for backend"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7b12be7b",
    "metadata": {},
    "source": [
@@ -14,22 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bc995b9b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "libGL.so.1: cannot open shared object file: No such file or directory",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcv2\u001b[39;00m\n",
-      "\u001b[31mImportError\u001b[39m: libGL.so.1: cannot open shared object file: No such file or directory"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2"
    ]
@@ -55,7 +54,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "E-KYC-Using-CN",
+   "display_name": "e-kyc-using-cn",
    "language": "python",
    "name": "python3"
   },
@@ -69,7 +68,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
