in last phase of OpenCV.ipynb , DNN

--- a/Notebooks/OpenCV.ipynb
+++ b/Notebooks/OpenCV.ipynb
@@ -1926,6 +1926,209 @@
     "cv2.imwrite('contours_none_image1.jpg', image_copy)\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "484f76ae",
+   "metadata": {},
+   "source": [
+    "**Drawing Contours using CHAIN_APPROX_SIMPLE**\n",
+    "\n",
+    "Let’s find out now how the CHAIN_APPROX_SIMPLE algorithm works and what makes it different from the CHAIN_APPROX_NONE algorithm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a27efbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Now let's try with `cv2.CHAIN_APPROX_SIMPLE`\n",
+    "\"\"\"\n",
+    "# detect the contours on the binary image using cv2.ChAIN_APPROX_SIMPLE\n",
+    "contours1, hierarchy1 = cv2.findContours(thresh, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "# draw contours on the original image for `CHAIN_APPROX_SIMPLE`\n",
+    "image_copy1 = image.copy()\n",
+    "cv2.drawContours(image_copy1, contours1, -1, (0, 255, 0), 2, cv2.LINE_AA)\n",
+    "# see the results\n",
+    "cv2.imshow('Simple approximation', image_copy1)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.imwrite('contours_simple_image1.jpg', image_copy1)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bcc5175",
+   "metadata": {},
+   "source": [
+    "The only difference here is that we specify the method for findContours() as CHAIN_APPROX_SIMPLE instead of CHAIN_APPROX_NONE.\n",
+    "\n",
+    "The CHAIN_APPROX_SIMPLE  algorithm compresses horizontal, vertical, and diagonal segments along the contour and leaves only their end points. This means that any of the points along the straight paths will be dismissed, and we will be left with only the end points. For example, consider a contour, along a rectangle. All the contour points, except the four corner points will be dismissed. This method is faster than the CHAIN_APPROX_NONE because the algorithm does not store all the points, uses less memory, and therefore, takes less time to execute.\n",
+    "\n",
+    "If you observe closely, there are almost no differences between the outputs of CHAIN_APPROX_NONE and CHAIN_APPROX_SIMPLE. \n",
+    "\n",
+    "Now, why is that?\n",
+    "\n",
+    "The credit goes to the drawContours() function. Although the CHAIN_APPROX_SIMPLE method typically results in fewer points, the drawContours() function automatically connects adjacent points, joining them even if they are not in the contours list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ad33446",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to actually visualize the effect of `CHAIN_APPROX_SIMPLE`, we need a proper image\n",
+    "image1 = cv2.imread('input/image_2.jpg')\n",
+    "img_gray1 = cv2.cvtColor(image1, cv2.COLOR_BGR2GRAY)\n",
+    " \n",
+    "ret, thresh1 = cv2.threshold(img_gray1, 150, 255, cv2.THRESH_BINARY)\n",
+    "contours2, hierarchy2 = cv2.findContours(thresh1, cv2.RETR_TREE,\n",
+    "                                               cv2.CHAIN_APPROX_SIMPLE)\n",
+    "image_copy2 = image1.copy()\n",
+    "cv2.drawContours(image_copy2, contours2, -1, (0, 255, 0), 2, cv2.LINE_AA)\n",
+    "cv2.imshow('SIMPLE Approximation contours', image_copy2)\n",
+    "cv2.waitKey(0)\n",
+    "image_copy3 = image1.copy()\n",
+    "for i, contour in enumerate(contours2): # loop over one contour area\n",
+    "   for j, contour_point in enumerate(contour): # loop over the points\n",
+    "       # draw a circle on the current contour coordinate\n",
+    "       cv2.circle(image_copy3, ((contour_point[0][0], contour_point[0][1])), 2, (0, 255, 0), 2, cv2.LINE_AA)\n",
+    "# see the results\n",
+    "cv2.imshow('CHAIN_APPROX_SIMPLE Point only', image_copy3)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.imwrite('contour_point_simple.jpg', image_copy3)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d14ee84",
+   "metadata": {},
+   "source": [
+    "### Simple Background Estimation in Videos using OpenCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d580749f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using the Median for Background Estimation\n",
+    "\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "from skimage import data, filters\n",
+    " \n",
+    "# Open Video\n",
+    "cap = cv2.VideoCapture('video.mp4')\n",
+    " \n",
+    "# Randomly select 25 frames\n",
+    "frameIds = cap.get(cv2.CAP_PROP_FRAME_COUNT) * np.random.uniform(size=25)\n",
+    " \n",
+    "# Store selected frames in an array\n",
+    "frames = []\n",
+    "for fid in frameIds:\n",
+    "    cap.set(cv2.CAP_PROP_POS_FRAMES, fid)\n",
+    "    ret, frame = cap.read()\n",
+    "    frames.append(frame)\n",
+    " \n",
+    "# Calculate the median along the time axis\n",
+    "medianFrame = np.median(frames, axis=0).astype(dtype=np.uint8)   \n",
+    " \n",
+    "# Display median frame\n",
+    "cv2.imshow('frame', medianFrame)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0b6be12",
+   "metadata": {},
+   "source": [
+    "**Frame differencing**\n",
+    "\n",
+    "The obvious next question is if we can create a mask for every frame which shows parts of the image that are in motion.\n",
+    "\n",
+    "This is accomplished in the following steps\n",
+    "```\n",
+    "    Convert the median frame to grayscale.\n",
+    "    Loop over all frames in the video. Extract the current frame and convert it to grayscale.\n",
+    "    Calcualte the absolute difference between the current frame and the median frame.\n",
+    "    Threshold the above image to remove noise and binarize the output.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d82280b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reset frame number to 0\n",
+    "cap.set(cv2.CAP_PROP_POS_FRAMES, 0)\n",
+    " \n",
+    "# Convert background to grayscale\n",
+    "grayMedianFrame = cv2.cvtColor(medianFrame, cv2.COLOR_BGR2GRAY)\n",
+    " \n",
+    "# Loop over all frames\n",
+    "ret = True\n",
+    "while(ret):\n",
+    " \n",
+    "  # Read frame\n",
+    "  ret, frame = cap.read()\n",
+    "  # Convert current frame to grayscale\n",
+    "  frame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "  # Calculate absolute difference of current frame and\n",
+    "  # the median frame\n",
+    "  dframe = cv2.absdiff(frame, grayMedianFrame)\n",
+    "  # Treshold to binarize\n",
+    "  th, dframe = cv2.threshold(dframe, 30, 255, cv2.THRESH_BINARY)\n",
+    "  # Display image\n",
+    "  cv2.imshow('frame', dframe)\n",
+    "  cv2.waitKey(20)\n",
+    " \n",
+    "# Release video object\n",
+    "cap.release()\n",
+    " \n",
+    "# Destroy all windows\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84a29c09",
+   "metadata": {},
+   "source": [
+    "## Deep Learning with OpenCV DNN Module"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4219b32c",
+   "metadata": {},
+   "source": [
+    "**What is OpenCV DNN Module?**\n",
+    "\n",
+    "We all know OpenCV as one of the best computer vision libraries. Additionally, it also has functionalities for running deep learning inference as well. The best part is supporting the loading of different models from different frameworks, using which we can carry out several deep learning functionalities. The feature of supporting models from different frameworks has been a part of OpenCV since version 3.3. Still, many newcomers to the field are unaware of this great feature of OpenCV. Therefore, they tend to miss many fun and good learning opportunities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e0cde45",
+   "metadata": {},
+   "source": [
+    "Different Models that OpenCV DNN Module Supports\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
